# git-standup-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  SONNET_WORKFLOW.md
src/standup_generator/: __init__.py  __main__.py  cli.py  config.py  errors.py  interactive.py  logging_setup.py  models.py  timerange.py  tui.py
src/standup_generator/git/: collector.py  discover.py  runner.py
src/standup_generator/renderers/: _format.py  base.py  markdown.py  text.py
src/standup_generator/summarizers/: base.py  claude.py  template.py
tests/: conftest.py  test_claude_summarizer.py  test_cli.py  test_collector.py  test_config.py  test_discover.py  test_integration_git.py  test_renderers.py  test_template_summarizer.py  test_timerange.py
tests/fixtures/: git_log_sample.txt
