[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-standup-generator"
version = "0.1.0"
description = "Generate a standup summary from local git history."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "michael.baker" }]
dependencies = [
    "typer>=0.12",
]

[project.scripts]
standup = "standup_generator.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/standup_generator"]

[tool.pytest.ini_options]
addopts = "-ra --cov=standup_generator --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
