[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-standup-generator"
version = "0.1.0"
description = "Generate a standup summary from local git history."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "michael.baker" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "questionary>=2.0",
    "textual>=0.70",
]

[project.scripts]
standup = "standup_generator.cli:app"

[project.optional-dependencies]
ai = [
    "anthropic>=0.30",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "anthropic>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/standup_generator"]

[tool.pytest.ini_options]
addopts = "-ra --cov=standup_generator --cov-report=term-missing"
testpaths = ["tests"]
markers = ["integration: end-to-end tests that use a real git subprocess"]

[tool.coverage.run]
omit = [
    "*/standup_generator/tui.py",
    "*/standup_generator/interactive.py",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
